--- a/template/ios/Podfile
+++ b/template/ios/Podfile
@@ -27,24 +27,10 @@ target 'HelloWorld' do
   # Note that if you have use_frameworks! enabled, Flipper will not work and
   # you should disable these next few lines.
   if not IS_CI
-    use_flipper!('Flipper' => '0.75.1', 'Flipper-Folly' => '2.5.3', 'Flipper-RSocket' => '1.3.1')
+    use_flipper!()
   end
   post_install do |installer|
-    if not IS_CI
-      react_native_post_install(installer)
-    end
-    installer.pods_project.targets.each do |target|
-      target.build_configurations.each do |config|
-      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '11.0'
-      end
-    end
-    installer.pods_project.targets.each do |target|
-      target.build_configurations.each do |config|
-        config.build_settings["ONLY_ACTIVE_ARCH"] = "YES"
-      end
-    end
-    installer.pods_project.build_configurations.each do |config|
-      config.build_settings["EXCLUDED_ARCHS[sdk=iphonesimulator*]"] = "arm64"
-    end
+    react_native_post_install(installer)
+    __apply_Xcode_12_5_M1_post_install_workaround(installer)
   end
 end
