--- a/template/package.json
+++ b/template/package.json
@@ -27,12 +27,12 @@
     "@sentry/react-native": "^2.6.0",
     "@welldone-software/why-did-you-render": "^6.2.0",
     "i18next": "^20.3.4",
-    "react": "17.0.1",
+    "react": "17.0.2",
     "react-i18next": "^11.8.8",
-    "react-native": "0.64.2",
+    "react-native": "0.66.0",
     "react-native-appstate-hook": "^1.0.5",
     "react-native-code-push": "^7.0.1",
-    "react-native-crisp-chat-sdk": "^0.7.0",
+    "react-native-crisp-chat-sdk": "^0.8.0",
     "react-native-dotenv": "^3.1.1",
     "react-native-fast-image": "^8.3.6",
     "react-native-file-logger": "^0.2.1",
@@ -40,7 +40,7 @@
     "react-native-keychain": "^7.0.0",
     "react-native-notifications": "^4.1.1",
     "react-native-permissions": "^3.0.5",
-    "react-native-reanimated": "^2.2.0",
+    "react-native-reanimated": "^2.3.0-beta.2",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
     "react-native-svg": "^12.1.1",
@@ -66,8 +66,8 @@
     "@testing-library/react-hooks": "^5.1.0",
     "@testing-library/react-native": "^7.2.0",
     "@types/detox": "^17.14.0",
-    "@types/jest": "^26.0.20",
-    "@types/react-native": "^0.64.0",
+    "@types/jest": "^26.0.23",
+    "@types/react-native": "^0.65.0",
     "@types/react-test-renderer": "^17.0.1",
     "@types/styled-components-react-native": "^5.1.0",
     "@types/styled-system": "^5.1.10",
@@ -83,14 +83,14 @@
     "jest": "^26.6.3",
     "jest-circus": "^26.6.3",
     "lint-staged": "^10.5.3",
-    "metro-react-native-babel-preset": "^0.65.1",
+    "metro-react-native-babel-preset": "^0.66.2",
     "patch-package": "^6.4.4",
     "postinstall-postinstall": "^2.1.0",
     "prettier": "^2.2.1",
     "react-dom": "17.0.1",
     "react-native-bundle-visualizer": "^2.2.1",
     "react-native-clean-project": "^3.6.4",
-    "react-test-renderer": "17.0.1",
+    "react-test-renderer": "17.0.2",
     "typescript": "^4.2.2"
   },
   "resolutions": {
